language/move-lang/tests/move_check/expansion/unbound_module_alias_in_type.exp
error: 

   ┌── tests/move_check/expansion/unbound_module_alias_in_type.move:2:12 ───
   │
 2 │     foo(x: X::T) {}
   │            ^ Unbound module alias 'X'
   │

