language/move-lang/tests/move_check/expansion/unbound_module_alias_in_type.move
module 0x8675309::M {
    fun foo(x: X::T) {}
}
